Swagger for Reservation Order
